[build-system]
requires = ["flit_core >=3.2,<4", "setuptools"]
build-backend = "flit_core.buildapi"

[project]
name = "sku"
authors = [{name = "Alex Capstick", email = "alexander.capstick19@imperial.ac.uk"}]
dynamic = ["version", "description"]
dependencies = [
    "numpy>=1.22",
    "scikit-learn>=1.0",
    "joblib>=1.1.0",
    "scikit-optimize>=0.8.1",
    "AML@git+https://github.com/alexcapstick/AML@main#egg=AML"
    ]
